# universal-calculator

./: LICENSE  README.md  pyproject.toml
app/: welcome.py
app/pages/: dashboard_sizing.py  element_sizing.py  percentage_calculator.py  timestamp_converter.py
